fix(): Bump background in dark mode.

--- a/src/tokens.css
+++ b/src/tokens.css
@@ -9,11 +9,11 @@
   color-scheme: light;
   --background: 0 0% 100%;
   --background-sunk: 0 0% 98%;
-  --foreground: 0 0% 8.9%;
+  --foreground: 0 0% 3.9%;
   --card: 0 0% 100%;
-  --card-foreground: 0 0% 8.9%;
+  --card-foreground: 0 0% 3.9%;
   --popover: 0 0% 100%;
-  --popover-foreground: 0 0% 8.9%;
+  --popover-foreground: 0 0% 3.9%;
   --primary: 0 0% 9%;
   --primary-foreground: 0 0% 98%;
   --secondary: 0 0% 96.1%;
@@ -26,7 +26,7 @@
   --destructive-foreground: 0 0% 98%;
   --border: 0 0% 89.8%;
   --input: 0 0% 89.8%;
-  --ring: 0 0% 8.9%;
+  --ring: 0 0% 3.9%;
   --radius: 0.3rem;
   --chart-1: 12 76% 61%;
   --chart-2: 173 58% 39%;
@@ -37,12 +37,12 @@
 
 :root [data-theme="dark"] {
   color-scheme: dark;
-  --background: 0 0% 8.9%;
-  --background-sunk: 0 0% 0%;
+  --background: 0 0% 9%;
+  --background-sunk: 0 0% 3.9%;
   --foreground: 0 0% 98%;
-  --card: 0 0% 8.9%;
+  --card: 0 0% 9%;
   --card-foreground: 0 0% 98%;
-  --popover: 0 0% 8.9%;
+  --popover: 0 0% 9%;
   --popover-foreground: 0 0% 98%;
   --primary: 0 0% 98%;
   --primary-foreground: 0 0% 9%;
